Fixed spacing bugs

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -46,7 +46,7 @@ h1,
 ///
 h2,
 .h2 {
-  font-size: var(--size);
+  font-size: var(--fs-700);
 }
 
 /// Apply font-size from abstracts/_font-scale
